# harfang-cpp-boostrap

./: .gitignore  CMakeLists.txt  README.md  _clang-format  demo.cpp  gen_vs2013_sln.bat  gen_vs2017_sln.bat
harfang_sdk/include/engine/: agg_pimpl.h  android_native_api.h  audio_codec.h  audio_data.h  audio_format.h  audio_io.h  axis.h  box_collision.h  camera.h  camera_system.h  caps.h  capsule_collision.h  collision.h  collision_pair.h  component.h  component_factory.h  convex_collision.h  core_reflection.h  core_resources.h  core_serialization.h  d6_joint.h  data_zip.h  debugger.h  decorator.h  display_list.h  engine.h  engine_factories.h  engine_plugins.h  environment.h  font_engine.h  geometry.h  geometry_bih.h  geometry_debug.h  geometry_merge.h  geometry_reducer.h  geometry_serialization.h  geometry_template.h  geometry_tree.h  geometry_uv_set.h  get_node_children_accelerator.h  (+111 more)
harfang_sdk/include/foundation/: allocator.h  allocator_profiler.h  ascii_encoder.h  assert.h  axis_lock.h  base_handle.h  base_type_reflection.h  base_type_std_vector_reflection.h  bih.h  billing.h  binary_blob.h  binary_document.h  build_info.h  byte_sort.h  call.h  call_queue.h  call_queue_mt.h  call_task.h  cext.h  clock.h  color.h  color_api.h  country.h  data_store.h  document.h  endian.h  factory.h  filesystem.h  float_pack.h  format.h  framework_reflection.h  frustum.h  geometric_tools.h  get_type_name.h  global_object.h  guid.h  io_alias.h  io_buffer.h  io_cache.h  io_cfile.h  (+76 more)
harfang_sdk/include/platform/: call_stack.h  crash_dump.h  filesystem_watcher.h  input_device.h  input_keyboard.h  input_mouse.h  input_system.h  pch.h  platform.h  plugin.h  process.h  shared_library.h  window_system.h
harfang_sdk/include/platform/android/: input_system.h  io_aasset.h  logcat_immediate_output.h  window_system.h
harfang_sdk/include/platform/glfw/: input_system_glfw.h
harfang_sdk/include/platform/osx/: cocoa_window_system.h  osx_input_keyboard.h  osx_input_mouse.h  osx_input_system.h
harfang_sdk/include/platform/sdl/: input_keyboard_sdl.h  input_mouse_sdl.h  input_system_sdl.h
harfang_sdk/include/platform/win32/: assert.h  input_dinput.h  input_system.h  input_xinput.h
harfang_sdk/include/platform/x11/: input_keyboard_x11.h  input_mouse_x11.h  input_system_x11.h
harfang_sdk/include/plus/: pch.h  plus.h
harfang_sdk/lib/win32/: platform.lib  plus.lib
